changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
plugins/cfanim/cfanim.c,
plugins/cfanim/include/cfanim.h,
plugins/cfanim/include/cfanim_proto.h:
  Changed the name of variables that some C compilers considered as
  keywords.
Yann "gros" Chachkoff 2008-02-01

configure.in: Remove to eliminate autoconf complaints that configure.ac and
  configure.in exist.
include/define.h: Add a comment to HOLE.
include/, include/.cvsignore: svnversion.h should not be controlled in SVN so
  ignore it. Changed svn:ignore property accordingly.
Kevin Bulgrien 2008-01-30

include/Makefile.am:  Use hint at http://www.in-ulm.de/~mascheck/various/echo/
  to try to remove a portability issue regarding use of echo -n.
Kevin Bulgrien 2008-01-29

Fix for bug 1850524 - SDL clients crash when entering boat.  Bogus scroll
values were being sent on mapscroll, but only the SDL client did anything
with the mapscroll variables, so only it saw problems.
---
types/transport/transport.c: Store away player x and y positions so we
  can do proper comparisions.  Move update of applier values out of
  if coordinates are different, since those need to get updated in all
  cases.
MSW 2008-01-27

Changes for SVN:
Fix for #1878361: "Hill Giants no longer throw boulders"
Modified files:
 server/skills.c
Yann "gros" Chachkoff, 2008-01-27

Fix for #1878323: "trunk server crashes when praying on alter"
Modified files:
 server/gods.c
Yann "gros" Chachkoff, 2008-01-27

New plugin: citylife. Adds NPCs to town, to make them more lively.
See the plugin documentation for more details.
Modified files:
 configure.ac: build new plugin.