@@ -153,37 +153,37 @@ max_level 115
 #D # New exp for better gain rate.  Main effect is for
 #D # lower levels so it is takes longer to gain a level.
 #D # after about level 20, this matches table C
-#D 0,5000,10000, 20000, 40000,80000,150000,300000,500000, 800000,
-#D # 10
-#D 1100000,1500000,1900000,2400000,
-#D 3000000,4600000,5300000,6000000, 6800000, 7600000,
-#D # 20
-#D  8500000,  9500000, 10600000, 11800000, 13000000
-#D 14300000, 15600000, 17000000, 18500000, 20000000
-#D # 30
-#D 21700000, 23400000, 25200000, 27000000, 29000000
-#D 31100000, 33300000, 35600000, 38000000, 40500000
-#D # 40
-#D 43200000, 46000000, 48900000, 52000000, 55200000
-#D 58600000, 62100000, 65900000, 69800000, 73900000
-#D # 50
-#D 78200000, 82700000, 87500000, 92500000, 97800000
-#D 103300000, 109100000, 115200000, 121500000, 128200000
-#D # 60
-#D 135300000, 142700000, 150400000, 158600000, 167100000
-#D 176100000, 185600000, 195500000, 205900000, 216800000
-#D # 70
-#D 228300000, 240300000, 252900000, 266200000, 280200000
-#D 294800000, 310200000, 326300000, 343200000, 361000000
-#D # 80
-#D 379700000, 399300000, 419900000, 441500000, 464200000
-#D 488100000, 513100000, 539400000, 567000000, 596000000
-#D # 90
-#D 626400000, 658300000, 691900000, 727100000, 764100000
-#D 802900000, 843700000, 886500000, 931500000, 978700000
-#D # 100
-#D 1028200000, 1080300000, 1134900000, 1192300000, 1252500000
-#D 1315800000, 1382200000, 1451900000, 1525100000, 2100000000
-#D # 110
-#D 4200000000, 8400000000, 16800000000,
-#D 33600000000, 67200000000
+0,5000,10000, 20000, 40000,80000,150000,300000,500000, 800000,
+# 10
+1100000,1500000,1900000,2400000,
+3000000,4600000,5300000,6000000, 6800000, 7600000,
+# 20
+8500000,  9500000, 10600000, 11800000, 13000000
+14300000, 15600000, 17000000, 18500000, 20000000
+# 30
+21700000, 23400000, 25200000, 27000000, 29000000
+31100000, 33300000, 35600000, 38000000, 40500000
+# 40
+43200000, 46000000, 48900000, 52000000, 55200000
+58600000, 62100000, 65900000, 69800000, 73900000
+# 50
+78200000, 82700000, 87500000, 92500000, 97800000
+103300000, 109100000, 115200000, 121500000, 128200000
+# 60
+135300000, 142700000, 150400000, 158600000, 167100000
+176100000, 185600000, 195500000, 205900000, 216800000
+# 70
+228300000, 240300000, 252900000, 266200000, 280200000
+294800000, 310200000, 326300000, 343200000, 361000000
+# 80
+379700000, 399300000, 419900000, 441500000, 464200000
+488100000, 513100000, 539400000, 567000000, 596000000
+# 90
+626400000, 658300000, 691900000, 727100000, 764100000
+802900000, 843700000, 886500000, 931500000, 978700000
+# 100
+1028200000, 1080300000, 1134900000, 1192300000, 1252500000
+1315800000, 1382200000, 1451900000, 1525100000, 2100000000
+# 110
+4200000000, 8400000000, 16800000000,
+33600000000, 67200000000
